--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,952 @@
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&display=swap");
 
+* {
+  -webkit-text-size-adjust: none;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+:root {
+  --dark_blue: #221e41;
+  --light: #6a677a;
+  --blue: #00d9db;
+  --white: #fff;
+  --black: #040307;
+
+  --light-gray: #e3e7e6;
+  --lighter-gray: #f0f3f5;
+  --flat-white: #fbfeff;
+
+  --cc: #ccc;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Heebo", sans-serif;
+  font-size: 1.6rem;
+  box-sizing: border-box;
+  background-color: var(--flat-white);
+}
+
+
+/** End Colors **/
+/********************************************** Laptop View ******************************************************/
+
+/*********************** Navigation *******************************/
+nav {
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  right: 0;
+  transition: all 0.5s ease;
+  top: 0;
+  padding: 0 7%;
+  height: 7.5rem;
+  background-color: var(--black);
+}
+
+nav .logo {
+  float: left;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+nav .logo_name {
+  font-size: 120%;
+  font-weight: 900;
+  color: var(--blue);
+  padding: 0;
+  margin: 0;
+}
+
+nav .logo-image {
+  width: auto;
+  height: 50%;
+  padding: 0;
+  margin: 0;
+}
+
+nav .links {
+  float: right;
+  padding: 0;
+  margin: 0;
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+nav .links li {
+  list-style: none;
+}
+
+nav .links a {
+  display: block;
+  margin: 1.8rem 1.8rem 0.5rem 1.8rem;
+  padding-bottom: 0.5rem;
+  font-size: clamp(1.6rem, 1.9vh, 2rem);
+  text-decoration: none;
+  position: relative;
+  color: white;
+}
+
+nav .links a::after {
+  content: "";
+  position: absolute;
+  transform: scaleX(0);
+  transform-origin: bottom center;
+  transition: ease-in-out 0.25s;
+  background-color: var(--blue);
+  width: 100%;
+  height: 0.2rem;
+  bottom: 0;
+  left: 0;
+}
+
+nav .links a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom center;
+  transition: ease-in-out 0.25s;
+}
+
+#nav-toggle {
+  position: absolute;
+  top: -10rem;
+}
+
+nav .icon-burger {
+  display: none;
+  position: absolute;
+  right: 5%;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 0.2rem solid var(--black);
+  border-radius: 0.5rem;
+}
+
+nav .icon-burger .line {
+  background-color: var(--white);
+  width: 2.6rem;
+  height: 0.3rem;
+  margin: 0.5rem;
+  border-radius: 3px;
+  transition: all 0.2s ease-in-out;
+}
+
+nav .icon-burger:focus {
+  border: 0.2rem solid var(--blue);
+}
+
+/******************** End Navigation *********************************/
+
+/*****************************Home Section *****************************/
+.home_container {
+  position: relative;
+  z-index: 1;
+  background-image: linear-gradient(to bottom right, #030406, #0f131b);
+  height: 100vh;
+  display: flex;
+}
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.home {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  display: flex;
+  margin: 0 10%;
+}
+
+.home_wrapper {
+  display: inline-block;
+  overflow: hidden;
+}
+
+.home_wrapper .greetings {
+  font-size: clamp(2rem, 2vw, 3rem);
+  font-weight: bold;
+  margin: 0;
+  padding: 0 0 2rem 0;
+  color: var(--white);
+}
+
+.home_wrapper .greetings2 {
+  font-size: clamp(1.6rem, 1.8vw, 2.2rem);
+  margin: 0;
+  padding: 2rem 0 0 0;
+  color: var(--white);
+  line-height: 1.5;
+}
+
+.home_wrapper .greetings3 {
+  font-size: clamp(1.6rem, 1.8vw, 2.2rem);
+  margin: 0;
+  padding: 1rem 0 4rem 0;
+  color: var(--white);
+  line-height: 1.5;
+}
+
+.home_wrapper .name {
+  font-weight: bold;
+  font-size: clamp(5rem, 6vw, 12rem);
+  margin: 0;
+  padding: 0;
+  color: var(--white);
+}
+
+.home_wrapper .softdev {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.home_wrapper .softdev .box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.home_wrapper .softdev .box .title {
+  position: relative;
+  height: clamp(3rem, 4vw, 6rem);
+  width: 100%;
+}
+
+.home_wrapper .softdev .box .block {
+  width: 0%;
+  height: inherit;
+  position: absolute;
+  animation: mainBlock 1s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
+  background-color: var(--blue);
+ }
+
+.home_wrapper .softdev .box .dev {
+  font-size: clamp(3rem, 4vw, 6rem);
+  font-weight: bold;
+  animation: mainFadeIn 3s forwards;
+  animation-delay: 0.8s;
+  opacity: 0;
+  margin: 0;
+  padding: 0;
+  color: #00d9db;
+}
+
+@keyframes mainBlock {
+  0% {
+    width: 0%;
+    left: 0;
+  }
+
+  50% {
+    width: 100%;
+    left: 0;
+  }
+
+  100% {
+    width: 0;
+    left: 100%;
+  }
+}
+
+@keyframes mainFadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.home_wrapper a .space {
+  padding-right: 0.8rem;
+  font-size: clamp(2rem, 1rem + 0.8vw, 2.5rem);
+  display: inline-block;
+}
+
+.button {
+  border: 0.2rem solid var(--blue);
+  border-radius: 0.5rem;
+  padding: 1.5rem 2rem;
+  font-size: clamp(1.6rem, 2vw, 2.2rem);
+  font-weight: bold;
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--blue);
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  box-sizing: border-box;
+}
+
+.button:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: transparent;
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: var(--blue);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.1s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button:hover {
+  border: 0.2rem solid var(--blue);
+  color: var(--black);
+  transition: ease-in-out 0.5s;
+}
+
+.button:hover:before {
+  top: -35%;
+  background-color: var(--blue);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button:hover:after {
+  top: -45%;
+  background-color: var(--blue);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+/********************** End Home Section ****************************/
+
+/*********************** About Section ********************************/
+.about {
+  padding: 10% 10%;
+  background-color: rgb(240, 243, 245, 0.3);
+}
+
+.about h1 {
+  margin: 0;
+  font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
+  padding-bottom: 1rem;
+  color: var(--dark_blue);
+}
+
+.about .about_flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about .about_flex .about_flex1 {
+  flex: 60%;
+}
+
+.about .about_flex .about_flex2 {
+  flex: 40%;
+}
+
+.about .about_flex .about_flex1 p {
+  padding: 0 6rem 0 0;
+  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+  color: var(--dark_blue);
+  line-height: 1.5;
+}
+
+.about_flex2 p {
+  font-weight: bold;
+  padding: 0 0 0 0;
+  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+  color: var(--dark_blue);
+  line-height: 1.5;
+}
+
+.icons_container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 0 0 0;
+  gap: clamp(1rem, 0.3333rem + 1.3333vw, 2rem);
+}
+
+.icons_container .icons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icons .icon_image {
+  height: clamp(2.5rem, -1.5rem + 3.2vw, 4.5rem);
+  width: auto;
+  background: var(--lighter-gray);
+  padding: clamp(2rem, -1rem + 1.6vw, 3rem);
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.icons .icon_image:hover {
+  transform: translateY(-0.5rem);
+  transition: ease-in-out 0.15s;
+  background: var(--light-gray);
+  padding: clamp(2rem, -1rem + 1.6vw, 3rem);
+  border-radius: 0.5rem;
+}
+
+.icons p {
+  font-size: clamp(1.1rem, 0.1rem + 0.8vw, 1.6rem);
+  padding: 0;
+  margin: 0;
+  color: var(--light);
+}
+
+/********************* End About Section **************************/
+
+/*********************** Project Section **************************/
+.project {
+  padding: 7% 10% 0 10%;
+  position: relative;
+}
+
+.project h1 {
+  font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
+  padding-bottom: 0px;
+  color: var(--dark_blue);
+}
+
+.project p {
+  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+  color: var(--dark_blue);
+  line-height: 1.5;
+}
+
+/* responsive Cols */
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.flex-item {
+  flex: 40%;
+}
+
+.p-container {
+  border-radius: 0.5rem;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+}
+
+.p-container img {
+  height: 100%;
+  width: 100%;
+}
+
+.overlay-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgb(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay-title h1 {
+  font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
+  width: 80%;
+  
+  color: var(--white);
+  text-align: center;
+  transition: opacity 0.4s ease-in-out;
+  
+}
+
+.p-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: linear-gradient(
+    45deg,
+    rgb(1, 2, 3, 0.95),
+    rgb(15, 19, 27, 0.9)
+  );
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: opacity 0.4s ease-in-out;
+
+}
+ 
+
+.p-overlay p{
+  color: var(--white);
+  padding: 0;
+  margin: 0;
+  line-height: 1.5;
+  width: 80%;
+  text-align: center;
+}
+
+.p-container:hover .p-overlay {
+  opacity: 1;
+}
+
+.p-container:hover .overlay-title h1 {
+  opacity: 0;
+}
+
+.icon-project {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon-project a {
+  display: inline-block;
+  padding: 1rem 2rem;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+}
+
+.project_btn1 {
+  background: var(--blue);
+  color: var(--white);
+  border: 0.2rem solid var(--blue);
+}
+.project_btn1:hover {
+  background: transparent;
+  color: var(--blue);
+  border: 0.2rem solid var(--blue);
+}
+
+.project_btn2 {
+  background: transparent;
+  color: var(--blue);
+  border: 0.2rem solid var(--blue);
+}
+
+.project_btn2:hover {
+  background: var(--blue);
+  color: var(--white);
+  border: 0.2rem solid var(--blue);
+}
+/************************ End Project Section *******************************/
+
+/****************************  Contact Section *******************/
+.contact {
+  padding: 10% 10% 5% 10%;
+  background-image: radial-gradient(#8c8c8c 0.04rem, transparent 0.04rem);
+  background-size: 1rem 1rem;
+ }
+
+.contact h1 {
+  margin: 0;
+  font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
+  padding-bottom: 3rem;
+  color: var(--dark_blue);
+}
+
+.contact h2 {
+  font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
+  margin: 0;
+  padding: 0;
+  color: var(--dark_blue);
+}
+.contact p {
+  padding-top: 1rem;
+  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+  color: var(--dark_blue);
+  line-height: 1.5;
+}
+
+.contact .flex-contact {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+}
+
+.contact .flex-contact-left {
+  flex: 60%;
+}
+
+.contact .flex-contact-right {
+  flex: 40%;
+}
+
+.contact_space_right {
+  padding-left: 1rem;
+}
+
+.contact_space_left {
+  padding-right: 15rem;
+}
+
+.contact .contact_icons {
+  display: flex;
+  gap: 0.8rem;
+  padding-bottom: 0.6rem;
+}
+
+.contact .contact_icons a {
+  text-decoration: none;
+  margin: 0;
+  padding: 0.4rem 1.2rem 0.05rem 1.2rem;
+  border-radius: 50%;
+  background: var(--lighter-gray);
+  font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
+  display: inline-block;
+  color: var(--blue);
+}
+
+.contact .contact_icons a:hover {
+  background: var(--light-gray);
+  color: var(--dark_blue);
+  transform: translateY(-5px);
+  transition: ease-in-out 0.15s;
+}
+
+label {
+  margin-left: 10px;
+  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+  color: var(--dark_blue);
+}
+
+input[type="email"] {
+  width: 100%;
+  padding: 1rem;
+  border: 0.2rem solid #ccc;
+  outline: none;
+  box-sizing: border-box;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+  font-family: "Heebo", Arial, sans-serif;
+  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+  border-radius: 0.5rem;
+  color: var(--dark_blue);
+}
+
+textarea {
+  width: 100%;
+  padding: 1rem;
+  border: 0.2rem solid #ccc;
+  border-radius: 0.5rem;
+  outline: none;
+  background: var(--white);
+  box-sizing: border-box;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+  resize: vertical;
+  font-family: "Heebo", Arial, sans-serif;
+  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+  height: 12rem;
+  color: var(--dark_blue);
+}
+
+input[type="email"]:hover,
+textarea:hover,
+input[type="email"]:focus,
+textarea:focus {
+  border: 0.2rem solid var(--blue);
+}
+
+input[type="submit"] {
+  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+  background-color: var(--blue);
+  color: var(--white);
+  padding: 1.2rem 2.4rem;
+  border-radius: 0.5rem;
+  border: 0.2rem solid var(--blue);
+}
+
+input[type="submit"]:hover {
+  border: 0.2rem solid #37f2f5;
+  background-color: #37f2f5;
+  color: #221e41;
+}
+
+input[type="submit"]:focus {
+  border: 0.2rem solid var(--blue);
+  background-color: var(--blue);
+  color: var(--white);
+}
+
+/************************ End Contact Section *******************/
+
+/************************* Footer Section **************************/
+.footer {
+  padding: 2rem;
+  text-align: center;
+  background-image: linear-gradient(45deg, #010203, #0f131b);
+}
+
+.footer p {
+  padding: 0;
+  margin: 0;
+  font-size: clamp(1.1rem, 0.1rem + 0.8vw, 1.6rem);
+  color: var(--white);
+  line-height: 1.5;
+}
+/*********************** End Footer Section ***********************/
+
+/********************************************** End Desktop View ******************************************************/
+
+/********************************************** Mobile View ******************************************************/
+@media screen and (min-width: 100px) and (max-width: 480px) {
+
+  nav{
+    padding: 0 5%;
+  }
+
+  nav .links {
+    float: none;
+    position: fixed;
+    z-index: 9;
+    left: 100%;
+    right: 0;
+    top: 7rem;
+    bottom: 0;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(4, 3, 7, 0.95);
+    overflow: hidden;
+    box-sizing: border-box;
+    transition: all 0.3s;
+  }
+
+  nav .links a {
+    font-size: 3rem;
+  }
+
+  nav :checked ~ .links {
+    left: 0;
+  }
+
+  nav .icon-burger {
+    display: block;
+    right: 3%;
+  }
+  nav :checked ~ .icon-burger .line:nth-child(1) {
+    transition: all 0.3s;
+    transform: translateY(8px) rotate(225deg);
+  }
+  nav :checked ~ .icon-burger .line:nth-child(3) {
+    transition: all 0.3s;
+    transform: translateY(-8px) rotate(-225deg);
+  }
+  nav :checked ~ .icon-burger .line:nth-child(2) {
+    transition: all 0.3s;
+    opacity: 0;
+  }
+
+  .home {
+    margin: 0 5%;
+  }
+
+  .about {
+    padding: 20% 5%;
+  }
+  .about .about_flex .about_flex1,
+  .about_flex2 {
+    flex: 100%;
+  }
+
+  .about .about_flex .about_flex1 p {
+    padding: 0;
+  }
+  /***********************Project Section ***********************************/
+  .project {
+    padding: 20% 5%;
+  }
+
+  /* responsive Cols */
+  .flex-item {
+    flex: 100%;
+  }
+
+ 
+  .p-overlay p{
+    width: 90%;
+  }
+  /******************* End Project Section *****************************************************/
+
+  .contact {
+    padding: 10rem 5%;
+  }
+
+  .contact .flex-contact-left,
+  .flex-contact-right {
+    flex: 100%;
+  }
+
+  .contact_space_right {
+    padding-left: 0;
+    padding-top: 2rem;
+  }
+
+  .contact_space_left {
+    padding-right: 0;
+  }
+
+  input[type="submit"] {
+    width: 100%;
+  }
+}
+/********************************************** End Mobile View ******************************************************/
+
+/********************************************** Tablet View ******************************************************/
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  /*  nav bar */
+
+  nav .links a {
+    font-size: 1.6rem;
+  }
+
+  .home {
+    margin: 0 8%;
+  }
+
+  .about {
+    padding: 15% 8%;
+  }
+
+  .about .about_flex .about_flex1 {
+    flex: 70%;
+  }
+
+  .about .about_flex .about_flex2 {
+    flex: 30%;
+  }
+
+  .project {
+    padding: 15% 8%;
+  }
+
+  .p-overlay p{
+    width: 90%;
+  }
+
+  .contact {
+    padding: 10% 8%;
+  }
+}
+/********************************************** End Tablet View ******************************************************/
+
+/********************************************** large desktop view******************************************************/
+@media screen and (min-width: 2000px) {
+  .home {
+    margin: 0 12%;
+  }
+
+  .about {
+    padding: 10 12%;
+  }
+
+  .project {
+    padding: 10rem 12%;
+  }
+
+  .contact {
+    padding: 10% 12%;
+  }
+}
+/********************************************** large desktop view******************************************************/
+ 
+
+.loader_bg{
+  position: fixed;
+  z-index: 99999;
+  background: var(--black);
+ 
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.load{
+  border: 2px solid white;
+  width: 15rem;
+  height: 15rem;
+}
+
+.load img{
+  width: 100%;
+  height: 100%;
+}
+
+ 
+.loader{
+  border: 0 solid transparent;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: calc(50vh - 75px);
+  left: calc(50vw - 75px);
+}
+
+.loader::before, .loader::after{
+  content: '';
+  border: 1em solid var(--blue);
+  border-radius: 50%;
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  top: 0;
+  left: 0 ;
+  animation: loader 2s linear infinite;
+  opacity: 0;
+}
+.loader::before{
+  animation-delay: 0.5s;
+}
+
+@keyframes loader{
+  0%{
+    transform: scale(0);
+    opacity: 0;
+  }
+  50%{
+    opacity: 1;
+
+  }
+  100%{
+    transform: scale(1);
+    opacity: 0;
+
+  }
+}
