--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ html {
   --cc: #ccc;
 
   --light_background: #1A2332;
-  --background: #111828;
+  --background: #0F1724;
   --grey: #6B7380;
 
   --yellow: #F09E14;
@@ -37,7 +37,9 @@ body {
   background-color: var(--background);
 }
 
-
+.strong_yellow{
+  color: var(--yellow);
+}
 /** End Colors **/
 /********************************************** Laptop View ******************************************************/
 
@@ -211,9 +213,9 @@ nav .icon-burger:focus {
 }
 
 .home_wrapper .greetings2 {
-  font-size: clamp(1.6rem, 1.8vw, 2.2rem);
+  font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   margin: 0;
-  padding: 2rem 0 0 0;
+  padding: 0 0 0 0;
   color: var(--white);
   line-height: 1.5;
 }
@@ -233,70 +235,8 @@ nav .icon-burger:focus {
   padding: 0;
   color: var(--white);
  }
-
-.home_wrapper .softdev {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-}
-
-.home_wrapper .softdev .box {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.home_wrapper .softdev .box .title {
-  position: relative;
-  height: clamp(3rem, 4vw, 6rem);
-  width: 100%;
-}
-
-.home_wrapper .softdev .box .block {
-  width: 0%;
-  height: inherit;
-  position: absolute;
-  animation: mainBlock 1s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
-  background-color: var(--blue);
- }
-
-.home_wrapper .softdev .box .dev {
-  font-size: clamp(3rem, 4vw, 6rem);
-  font-weight: bold;
-  animation: mainFadeIn 3s forwards;
-  animation-delay: 0.8s;
-  opacity: 0;
-  margin: 0;
-  padding: 0;
-  color: var(--blue);
-}
-
-@keyframes mainBlock {
-  0% {
-    width: 0%;
-    left: 0;
-  }
-
-  50% {
-    width: 100%;
-    left: 0;
-  }
-
-  100% {
-    width: 0;
-    left: 100%;
-  }
-}
-
-@keyframes mainFadeIn {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
+ 
+ 
 
 .home_wrapper a .space {
   padding-right: 0.8rem;
@@ -406,8 +346,9 @@ nav .icon-burger:focus {
 .about_flex2 p {
   font-weight: bold;
   padding: 0 0 0 0;
-  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
-  color: var(--white);
+  margin: 0;
+  font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
+  color: var(--blue);
   line-height: 1.5;
 }
 
@@ -454,7 +395,7 @@ nav .icon-burger:focus {
 .project {
   padding: 7% 12% 5% 12%;
   position: relative;
-  background-color: var(--flat-white);
+  background-color: var(--light_background);
 }
 
 .project h1 {
@@ -481,8 +422,7 @@ nav .icon-burger:focus {
 }
 
 .p-container {
-  border-radius: 0.5rem;
-  position: relative;
+   position: relative;
   overflow: hidden;
   height: 100%;
   box-sizing: border-box;
@@ -509,11 +449,6 @@ nav .icon-burger:focus {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
-  box-sizing: border-box;
-  overflow: hidden;
-  border-radius: 0.5rem;
-   
  
 }
 
