--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,17 @@ html {
 }
 
 :root {
-  --dark_blue: #221e41;
-  --light: #6a677a;
   --blue: #0EA5EA;
-  --white: #FDFFFE;
-  --black: #040307;
+  --dark_blue: #2563EA;
 
+
+  --dark_yellow: #F49E0B;
+  --yellow: #F09E14;
+
+  --white: #FDFFFE;
+
+  --black: #040307;
+  --light: #6a677a;
   --light-gray: #e3e7e6;
   --lighter-gray: #f0f3f5;
   --flat-white: #fbfeff;
@@ -25,7 +30,6 @@ html {
   --background: #0F1724;
   --grey: #6B7380;
 
-  --yellow: #F09E14;
 }
 
 body {
@@ -37,9 +41,14 @@ body {
   background-color: var(--background);
 }
 
-.strong_yellow{
-  color: var(--yellow);
+.strong_yellow {
+  background-image: linear-gradient(45deg, var(--yellow), var(--dark_yellow));
+  background-size: 100%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
+
 /** End Colors **/
 /********************************************** Laptop View ******************************************************/
 
@@ -51,7 +60,7 @@ nav {
   right: 0;
   transition: all 0.5s ease;
   top: 0;
-  padding: 0 9%;
+  padding: 0 10%;
   height: 7.5rem;
   background-color: var(--background);
 }
@@ -156,8 +165,8 @@ nav .icon-burger:focus {
 .home_container {
   position: relative;
   z-index: 1;
- /* background-image: linear-gradient(to bottom right, #030406, #0f131b);*/
- background-color: var(--background);
+  /* background-image: linear-gradient(to bottom right, #030406, #0f131b);*/
+  background-color: var(--background);
   height: 100vh;
   display: flex;
   justify-content: flex-start;
@@ -176,15 +185,15 @@ nav .icon-burger:focus {
   align-items: center;
   justify-content: flex-start;
   display: flex;
-  margin: 0 12%;
+  margin: 0 15%;
 }
 
-.home .icon_links{
+.home .icon_links {
   display: block;
   padding-right: 7rem;
- }
+}
 
-.icon_links a{
+.icon_links a {
   display: block;
   font-size: 3.5rem;
   color: var(--grey);
@@ -193,12 +202,12 @@ nav .icon-burger:focus {
   margin: 0 0 0.5rem 0;
 }
 
-.icon_links a:hover{
+.icon_links a:hover {
   color: var(--white);
 }
 
 .home_wrapper {
-   display: inline-block;
+  display: inline-block;
   overflow: hidden;
   padding-left: 7rem;
   border-left: 0.2rem solid var(--grey);
@@ -207,7 +216,7 @@ nav .icon-burger:focus {
 
 .home_wrapper .greetings {
   font-size: clamp(1.6rem, 1.8vw, 2.2rem);
-   margin: 0;
+  margin: 0;
   padding: 0 0 0.5rem 0;
   color: var(--white);
 }
@@ -234,9 +243,14 @@ nav .icon-burger:focus {
   margin: 0;
   padding: 0;
   color: var(--white);
- }
- 
- 
+  background-image: linear-gradient(45deg, var(--blue), var(--dark_blue));
+  background-size: 100%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
 
 .home_wrapper a .space {
   padding-right: 0.8rem;
@@ -245,20 +259,22 @@ nav .icon-burger:focus {
 }
 
 .button {
-  border: 0.2rem solid var(--blue);
   border-radius: 0.5rem;
   padding: 1.5rem 2rem;
   font-size: clamp(1.6rem, 2vw, 2.2rem);
-  font-weight: bold;
   cursor: pointer;
   text-decoration: none;
-  color: var(--blue);
+  color: var(--white);
   display: inline-block;
   transition: all 0.2s ease-in;
   position: relative;
   overflow: hidden;
   z-index: 1;
   box-sizing: border-box;
+  background-image: linear-gradient(45deg, var(--blue), var(--dark_blue));
+
+
+
 }
 
 .button:before {
@@ -292,8 +308,7 @@ nav .icon-burger:focus {
 }
 
 .button:hover {
-  border: 0.2rem solid var(--blue);
-  color: var(--black);
+  color: var(--white);
   transition: ease-in-out 0.5s;
 }
 
@@ -308,19 +323,20 @@ nav .icon-burger:focus {
   background-color: var(--blue);
   transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
+
 /********************** End Home Section ****************************/
 
 /*********************** About Section ********************************/
 .about {
-  padding: 10% 12%;
-  background-color: var(--light_background);
+  padding: 10% 15%;
+  background-image: linear-gradient(45deg, var(--blue), var(--dark_blue));
 }
 
 .about h1 {
   margin: 0;
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   padding-bottom: 1rem;
-  color: var(--yellow);
+  color: var(--white);
 }
 
 .about .about_flex {
@@ -348,7 +364,7 @@ nav .icon-burger:focus {
   padding: 0 0 0 0;
   margin: 0;
   font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
-  color: var(--blue);
+  color: var(--yellow);
   line-height: 1.5;
 }
 
@@ -356,44 +372,58 @@ nav .icon-burger:focus {
   display: flex;
   flex-wrap: wrap;
   padding: 0 0 0 0;
-  gap: clamp(1rem, 0.3333rem + 1.3333vw, 2rem);
+  gap: 0.5rem;
 }
 
 .icons_container .icons {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  cursor: pointer;
 }
 
 .icons .icon_image {
   height: clamp(2.5rem, -1.5rem + 3.2vw, 4.5rem);
   width: auto;
-  background: var(--grey);
-  padding: clamp(2rem, -1rem + 1.6vw, 3rem);
-  border-radius: 0.5rem;
-  cursor: pointer;
-}
-
-.icons .icon_image:hover {
-  transform: translateY(-0.5rem);
-  transition: ease-in-out 0.15s;
-  background: var(--light-gray);
+  background: var(--white);
   padding: clamp(2rem, -1rem + 1.6vw, 3rem);
   border-radius: 0.5rem;
 }
 
-.icons p {
+
+.icons .icons_overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: linear-gradient(45deg, var(--blue), var(--dark_blue));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  opacity: 0;
+}
+
+.icons_overlay p {
   font-size: clamp(1.1rem, 0.1rem + 0.8vw, 1.6rem);
   padding: 0;
   margin: 0;
-  color: var(--grey);
+  color: var(--white);
 }
+
+.icons:hover .icons_overlay {
+  opacity: 1;
+}
+
 
 /********************* End About Section **************************/
 
 /*********************** Project Section **************************/
 .project {
-  padding: 7% 12% 5% 12%;
+  padding: 7% 15% 5% 15%;
   position: relative;
   background-color: var(--light_background);
 }
@@ -422,18 +452,16 @@ nav .icon-burger:focus {
 }
 
 .p-container {
-   position: relative;
+  position: relative;
   overflow: hidden;
   height: 100%;
   box-sizing: border-box;
- }
+}
 
 .p-container img {
   height: 100%;
   width: 100%;
-  border-radius: 0.5rem;
-   overflow: hidden;
-  
+
 }
 
 .overlay-title {
@@ -442,19 +470,18 @@ nav .icon-burger:focus {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: linear-gradient(
-    45deg,
-    rgb(15, 19, 27, 7),rgb(1, 2, 3, 0.7)
-  );  display: flex;
+  background-image: linear-gradient(45deg,
+      rgb(15, 19, 27, 7), rgb(1, 2, 3, 0.7));
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
- 
+
 }
 
 .overlay-title .title1 {
-   font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
-   font-weight: bold;
+  font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
+  font-weight: bold;
   width: 80%;
   margin: 0;
   padding: 0;
@@ -466,24 +493,22 @@ nav .icon-burger:focus {
 .overlay-title .title2 {
   font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
   width: 80%;
- margin: 0;
- padding: 0;
- color: var(--yellow);
- text-align: center;
- transition: opacity 0.4s ease-in-out;
+  margin: 0;
+  padding: 0;
+  color: var(--yellow);
+  text-align: center;
+  transition: opacity 0.4s ease-in-out;
 }
 
-.p-overlay{
+.p-overlay {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: linear-gradient(
-    45deg,
-    rgb(1, 2, 3, 0.95),
-    rgb(15, 19, 27, 0.8)
-  );
+  background-image: linear-gradient(45deg,
+      rgb(1, 2, 3, 0.95),
+      rgb(15, 19, 27, 0.8));
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -492,9 +517,9 @@ nav .icon-burger:focus {
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
- 
 
-.p-overlay p{
+
+.p-overlay p {
   color: var(--white);
   padding: 0;
   margin: 0;
@@ -532,6 +557,7 @@ nav .icon-burger:focus {
   color: var(--white);
   border: 0.2rem solid var(--blue);
 }
+
 .project_btn1:hover {
   background: transparent;
   color: var(--blue);
@@ -549,13 +575,14 @@ nav .icon-burger:focus {
   color: var(--white);
   border: 0.2rem solid var(--blue);
 }
+
 /************************ End Project Section *******************************/
 
 /****************************  Contact Section *******************/
 .contact {
-  padding: 10% 12% 5% 12%;
+  padding: 10% 15% 5% 15%;
   background-color: var(--background);
-   }
+}
 
 .contact h1 {
   margin: 0;
@@ -564,7 +591,7 @@ nav .icon-burger:focus {
   color: var(--yellow);
 }
 
-.contact .wave{
+.contact .wave {
   animation-name: wave-animation;
   animation-duration: 2.5s;
   animation-iteration-count: infinite;
@@ -572,15 +599,38 @@ nav .icon-burger:focus {
   display: inline-block;
 }
 
-@keyframes wave-animation{
-  0%{ transform: rotate(0.0deg);}
-  10%{ transform: rotate(14.0deg);}
-  20%{ transform: rotate(-8.0deg);}
-  30%{ transform: rotate(14.0deg);}
-  40%{ transform: rotate(-4.0deg);}
-  50%{ transform: rotate(10.0deg);}
-  60%{ transform: rotate(0.0deg);}
-  100%{ transform: rotate(0.0deg);}
+@keyframes wave-animation {
+  0% {
+    transform: rotate(0.0deg);
+  }
+
+  10% {
+    transform: rotate(14.0deg);
+  }
+
+  20% {
+    transform: rotate(-8.0deg);
+  }
+
+  30% {
+    transform: rotate(14.0deg);
+  }
+
+  40% {
+    transform: rotate(-4.0deg);
+  }
+
+  50% {
+    transform: rotate(10.0deg);
+  }
+
+  60% {
+    transform: rotate(0.0deg);
+  }
+
+  100% {
+    transform: rotate(0.0deg);
+  }
 
 }
 
@@ -590,6 +640,7 @@ nav .icon-burger:focus {
   padding: 0;
   color: var(--white);
 }
+
 .contact p {
   padding-top: 1rem;
   font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
@@ -598,7 +649,7 @@ nav .icon-burger:focus {
 }
 
 .contact .flex-contact {
-   display: flex;
+  display: flex;
   flex-wrap: wrap;
   margin: 0;
 }
@@ -628,13 +679,13 @@ nav .icon-burger:focus {
 .contact .contact_icons a {
   text-decoration: none;
   margin: 0;
-    font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
+  font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   display: inline-block;
   color: var(--blue);
 }
 
 .contact .contact_icons a:hover {
-   color: var(--white);
+  color: var(--white);
   transform: translateY(-5px);
   transition: ease-in-out 0.15s;
 }
@@ -661,7 +712,7 @@ input[type="email"] {
 }
 
 textarea {
- 
+
   width: 100%;
   padding: 1rem;
   border: 0.2rem solid var(--grey);
@@ -687,22 +738,20 @@ textarea:focus {
 
 input[type="submit"] {
   font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
-  background-color: var(--blue);
+  background-image: linear-gradient(45deg, var(--blue), var(--dark_blue));
   color: var(--white);
   padding: 1.2rem 2.4rem;
   border-radius: 0.5rem;
-  border: 0.2rem solid var(--blue);
-}
+  border: none;
+ }
 
 input[type="submit"]:hover {
-  border: 0.2rem solid #37f2f5;
-  background-color: #37f2f5;
-  color: #221e41;
+   background-color: #37f2f5;
+  color: var(--white);
 }
 
 input[type="submit"]:focus {
-  border: 0.2rem solid var(--blue);
-  background-color: var(--blue);
+   background-color: var(--blue);
   color: var(--white);
 }
 
@@ -711,21 +760,29 @@ input[type="submit"]:focus {
 /************************* Footer Section **************************/
 .footer {
   padding: 2.5rem;
-  text-align: center;
-  background-color: var(--light_background);
+   background-color: var(--background);
+   display: flex;
+    align-items: center;
+   justify-content: center;
+
 }
 
-.footer .footer-image{
-height: 4rem;
-width: auto;
+.footer .footer-image {
+  height: 4rem;
+  width: auto;
+  padding-right: 1rem;
+  border-right: 0.3rem solid var(--blue);
+
+ 
 }
+
 .footer p {
-  padding: 0;
-  margin: 0;
+   margin: 0 0 0 1rem;
   font-size: clamp(1.1rem, 0.1rem + 0.8vw, 1.6rem);
   color: var(--grey);
   line-height: 1.5;
 }
+
 /*********************** End Footer Section ***********************/
 
 /********************************************** End Desktop View ******************************************************/
@@ -733,7 +790,7 @@ width: auto;
 /********************************************** Mobile View ******************************************************/
 @media screen and (min-width: 100px) and (max-width: 480px) {
 
-  nav{
+  nav {
     padding: 0 5%;
   }
 
@@ -759,7 +816,7 @@ width: auto;
     font-size: 3rem;
   }
 
-  nav :checked ~ .links {
+  nav :checked~.links {
     left: 0;
   }
 
@@ -767,15 +824,18 @@ width: auto;
     display: block;
     right: 3%;
   }
-  nav :checked ~ .icon-burger .line:nth-child(1) {
+
+  nav :checked~.icon-burger .line:nth-child(1) {
     transition: all 0.3s;
     transform: translateY(8px) rotate(225deg);
   }
-  nav :checked ~ .icon-burger .line:nth-child(3) {
+
+  nav :checked~.icon-burger .line:nth-child(3) {
     transition: all 0.3s;
     transform: translateY(-8px) rotate(-225deg);
   }
-  nav :checked ~ .icon-burger .line:nth-child(2) {
+
+  nav :checked~.icon-burger .line:nth-child(2) {
     transition: all 0.3s;
     opacity: 0;
   }
@@ -784,31 +844,31 @@ width: auto;
     margin: 0 5%;
     display: flex;
     justify-content: flex-start;
-     flex-direction: column;
-   }
+    flex-direction: column;
+  }
 
-  .home .icon_links{
-    padding: 1rem 0 0 0 ;
+  .home .icon_links {
+    padding: 1rem 0 0 0;
     display: flex;
     gap: 1rem;
-     padding-right: 0;
-     width: 100%;
-    }
+    padding-right: 0;
+    width: 100%;
+  }
 
-    .home .icon_links a{
-      font-size: 3rem;
-    }
- 
+  .home .icon_links a {
+    font-size: 3rem;
+  }
 
-   #a{
+
+  #a {
     order: 2;
-   }
+  }
 
-   #b{
+  #b {
     order: 1;
-   }
+  }
 
-  .home .home_wrapper{
+  .home .home_wrapper {
     padding-left: 0;
     border: none;
 
@@ -819,6 +879,7 @@ width: auto;
   .about {
     padding: 20% 5%;
   }
+
   .about .about_flex .about_flex1,
   .about_flex2 {
     flex: 100%;
@@ -827,6 +888,7 @@ width: auto;
   .about .about_flex .about_flex1 p {
     padding: 0;
   }
+
   /***********************Project Section ***********************************/
   .project {
     padding: 20% 5%;
@@ -837,10 +899,11 @@ width: auto;
     flex: 100%;
   }
 
- 
-  .p-overlay p{
+
+  .p-overlay p {
     width: 90%;
   }
+
   /******************* End Project Section *****************************************************/
 
   .contact {
@@ -865,6 +928,7 @@ width: auto;
     width: 100%;
   }
 }
+
 /********************************************** End Mobile View ******************************************************/
 
 /********************************************** Tablet View ******************************************************/
@@ -895,7 +959,7 @@ width: auto;
     padding: 15% 8%;
   }
 
-  .p-overlay p{
+  .p-overlay p {
     width: 90%;
   }
 
@@ -903,6 +967,7 @@ width: auto;
     padding: 10% 8%;
   }
 }
+
 /********************************************** End Tablet View ******************************************************/
 
 /********************************************** large desktop view******************************************************/
@@ -923,12 +988,13 @@ width: auto;
     padding: 10% 12%;
   }
 }
+
 /********************************************** large desktop view******************************************************/
- 
 
 
 
-.loader_bg{
+
+.loader_bg {
   position: fixed;
   z-index: 999;
   background-image: linear-gradient(to bottom right, #030406, #0f131b);
@@ -942,14 +1008,14 @@ width: auto;
   transition: ease-out 0.2s;
 }
 
- 
-.loader_img{
+
+.loader_img {
   width: 4.5rem;
   height: 4.5rem;
-  background-color:  #303030;
+  background-color: #303030;
   padding: 0.3rem;
-   border-radius: 50%;
- border: 0.8rem solid var(--blue);
+  border-radius: 50%;
+  border: 0.8rem solid var(--blue);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -957,14 +1023,14 @@ width: auto;
   z-index: 99999;
 }
 
-.loader_img img{
+.loader_img img {
   width: 3rem;
   height: 3rem;
-  }
+}
 
- 
-.loader{
- 
+
+.loader {
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -973,14 +1039,15 @@ width: auto;
   border-radius: 50%;
   width: 9rem;
   height: 9rem;
-  
+
   position: absolute;
   top: 50%;
-  left: 50% ;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.loader::before, .loader::after{
+.loader::before,
+.loader::after {
   content: '';
   border: 1.5rem solid var(--blue);
   border-radius: 50%;
@@ -988,25 +1055,27 @@ width: auto;
   height: 10rem;
 
   position: absolute;
-  
+
   animation: loader 1s linear infinite;
   opacity: 0;
 }
 
-.loader::before{
+.loader::before {
   animation-delay: 0.2s;
 }
 
-@keyframes loader{
-  0%{
+@keyframes loader {
+  0% {
     transform: scale(0);
     opacity: 0;
   }
-  50%{
+
+  50% {
     opacity: 1;
 
   }
-  100%{
+
+  100% {
     transform: scale(1);
     opacity: 0;
 
