change google fonts

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&display=swap");
-
+ @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;500;700&display=swap');
+ 
 * {
   -webkit-text-size-adjust: none;
 }
