add font weights

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;600&display=swap');
 
 * {
   -webkit-text-size-adjust: none;
