--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ nav .icon-burger:focus {
 }
 
 .home_wrapper .greetings {
-  font-size: clamp(1.6rem, 1.8vw, 2.2rem);
+  font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   margin: 0;
   padding: 0 0 0.5rem 0;
   color: var(--white);
@@ -228,7 +228,7 @@ nav .icon-burger:focus {
   padding: 0 0 0 0;
   color: var(--white);
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 200;
 
 }
 
@@ -324,7 +324,7 @@ nav .icon-burger:focus {
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   padding-bottom: 1rem;
   color: var(--blue);
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .about p {
