added button to open overlay

--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,22 @@ text-align: center;}
   font-weight: 200;
 }
 
+.overlay-title .opens_overlay{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: none;
+  margin-left: 0.5rem;
+ }
+
+.opens_overlay i{
+  padding: 0;
+  margin: 0;
+  color: var(--grey);
+  font-size: 1.6rem;
+}
+
+
 .p-overlay {
   position: absolute;
   top: 0;
@@ -913,6 +929,14 @@ input[type="submit"]:focus {
     flex: 100%;
   }
 
+  .overlay-title .opens_overlay{
+    display: block; 
+   }
+
+  .opens_overlay:active {
+    color: var(--blue);
+    display: none;
+  }
 
   .p-overlay p {
     width: 90%;
