--- a/css/style.css
+++ b/css/style.css
@@ -173,12 +173,7 @@ nav .icon-burger:focus {
   align-items: center;
 }
 
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
+ 
 
 .home {
   display: flex;
@@ -215,6 +210,7 @@ nav .icon-burger:focus {
 
 }
 
+/*
 .home_wrapper .greetings {
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   margin: 0px;
@@ -222,6 +218,7 @@ nav .icon-burger:focus {
   color: var(--white);
   font-weight: 200;
 }
+*/
 
 .home_wrapper h2 {
   font-size: clamp(2.4rem, -0.8rem + 2.56vw, 4rem);   
@@ -494,7 +491,7 @@ text-align: center;}
   left: 0;
   display: none;
   margin-left: 0.5rem;
- }
+  }
 
 .opens_overlay i{
   padding: 0;
@@ -502,6 +499,7 @@ text-align: center;}
   color: var(--grey);
   font-size: 1.6rem;
 }
+
 
 
 .p-overlay {
@@ -580,6 +578,22 @@ text-align: center;}
   color: var(--white);
   border: 0.2rem solid var(--dark_blue);
 }
+
+.p-overlay .close_overlay{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: none;
+  margin-left: 0.5rem;
+  }
+  
+.close_overlay i{
+  padding: 0;
+  margin: 0;
+  color: var(--yellow);
+  font-size: 2rem;
+}
+
 
 /************************ End Project Section *******************************/
 
@@ -933,14 +947,22 @@ input[type="submit"]:focus {
     display: block; 
    }
 
-  .opens_overlay:active {
+  .opens_overlay:hover {
     color: var(--blue);
+  }
+
+  .p-overlay .close_overlay{
+    display: block;
+  }
+
+  .close_overlay:hover .p-overlay{
     display: none;
   }
 
   .p-overlay p {
     width: 90%;
   }
+
 
  
 
