--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ nav .logo_name{
   font-size: clamp(2.4rem, -0.8rem + 2.56vw, 4rem);   
   color: var(--grey);
   font-weight: 600;
+  margin-left: 5px;
 }
 
 nav .links {
